--- a/NotSoForgottenCemetery/Pages/MemoryBoardPage/MemoryBoard.xaml
+++ b/NotSoForgottenCemetery/Pages/MemoryBoardPage/MemoryBoard.xaml
@@ -1,7 +1,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:NotSoForgottenCemetery.Pages.MemoryBoard"
-             x:Class="NotSoForgottenCemetery.Pages.MemoryBoard.MemoryBoardPage">
+             x:Class="NotSoForgottenCemetery.Pages.MemoryBoardPage.MemoryBoardPage">
 
     <ContentPage.BindingContext>
         <vm:MemoryBoardViewModel />
