--- a/NotSoForgottenCemetery/Pages/PlaylistPage/PlayListPage.xaml
+++ b/NotSoForgottenCemetery/Pages/PlaylistPage/PlayListPage.xaml
@@ -1,7 +1,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:NotSoForgottenCemetery.Pages.PlaylistPage"
-             x:Class="NotSoForgottenCemetery.Pages.PlaylistPage.PlaylistPage">
+             x:Class="NotSoForgottenCemetery.Pages.PlaylistPage.PlayListPage">
 
     <ContentPage.BindingContext>
         <vm:PlaylistViewModel />
